0028789: Visualization, TKV3d - extend API for accessing and assigning BVH builders

Several methods in Selection classes have been moved to header files for better inlining.

BVH_Constants - added new enumeration defining common constant values used with BVH trees.
BVH - replaced NCollection_Handle with Standard_Transient handle
in classes BVH_Properties, BVH_Builder, BVH_Tree, BVH_Object.

Defined global BVH-builders instead of allocating a new one for each object set.
SelectMgr_ViewerSelector - added new method ::SetEntitySetBuilder() defining
default BVH Tree builder for SelectMgr_SensitiveEntitySet.

Added new method SelectMgr_SensitiveEntitySet::SetBuilder()
for overriding default BVH tree builder.

# Conflicts:
#	dox/dev_guides/upgrade/upgrade.md
#	src/Select3D/Select3D_SensitiveSet.hxx
#	src/SelectBasics/SelectBasics_SensitiveEntity.cxx
#	src/SelectBasics/SelectBasics_SensitiveEntity.hxx